Fix transparent title bar in welcome flow
Need that specificity

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -119,9 +119,11 @@
 
 #desktop-app-title-bar.light-title-bar {
   @include darwin {
-    height: var(--darwin-title-bar-height);
-    z-index: 1;
+    background: transparent;
+    border-bottom: none;
+  }
 
+  @include win32 {
     background: transparent;
     border-bottom: none;
   }
