Style selected text in editor
No more of that ghastly purple

--- a/app/styles/ui/_diff.scss
+++ b/app/styles/ui/_diff.scss
@@ -43,6 +43,14 @@
     // Add a border to the end of the diff
     border-top: var(--base-border);
   }
+
+  &-focused &-selected, &-selected {
+    background: var(--diff-selected-background-color)
+  }
+
+  &-selectedtext {
+    color: var(--diff-selected-text-color) !important;
+  }
 }
 
 // The container element which holds the before and after
