:art: Use 100% instead of calculating height

--- a/app/styles/ui/window/_title-bar.scss
+++ b/app/styles/ui/window/_title-bar.scss
@@ -53,7 +53,7 @@
       display: inline-block;
       position: relative;
       width: 45px;
-      height: calc(var(--win32-title-bar-height) - 1px);
+      height: 100%;
       padding: 0;
       margin: 0;
       overflow: hidden;
