--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -145,6 +145,7 @@
 
   /** The height of the title bar area on Win32 platforms */
   --win32-title-bar-height: 23px;
+  --win32-title-bar-background-color: darken($darkerGray, 10%);
 
   /** The height of the title bar area on darwin platforms */
   --darwin-title-bar-height: 22px;
